--- a/0.style.css
+++ b/0.style.css
@@ -49,16 +49,8 @@
   color: #ccc;
 }
 
-.mp-nav__product[data-v-d4815ca0] {
-  font-size: 1.3rem;
-  font-weight: 600;
-  color: #000;
-  line-height: 2.5rem;
-}
-.mp-nav__product__link[data-v-d4815ca0] {
-  color: #000;
-}
-.mp-nav[data-v-d4815ca0] {
+.mp-nav[data-v-c6b6b066] {
+  box-sizing: border-box;
   z-index: 1000;
   display: flex;
   background-color: #fff;
@@ -66,13 +58,21 @@
   line-height: 2.2rem;
   border-bottom: 1px solid #dce1e5;
 }
-.mp-nav__items[data-v-d4815ca0] {
+.mp-nav__items[data-v-c6b6b066] {
   display: flex;
   justify-content: flex-end;
-  flex-grow: 1;
+  flex-shrink: 0;
+  width: 100%;
+}
+@media (max-width: 705px) {
+.mp-nav__items[data-v-c6b6b066] {
+    display: none;
+}
 }
 
 .mp-toc__item {
+  padding-left: 2rem;
+  padding-right: 2rem;
   font-size: 1rem;
   padding-top: 0;
   padding-bottom: 0;
@@ -123,24 +123,136 @@
   font-size: 0.8rem;
 }
 
-body,
-html {
-  padding: 0;
-  margin: 0;
-  background-color: #fff;
+.navbar-items[data-v-a6bee15c] {
+  border-bottom: 1px solid #dce1e5;
+  margin-bottom: 2rem;
+  padding-bottom: 2rem;
 }
-body {
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
-  -webkit-font-smoothing: antialiased;
+
+@-moz-keyframes fadeInFromNone {
+0% {
+    display: none;
+    opacity: 0;
+    background-color: '#000';
+}
+1% {
+    display: block;
+    opacity: 0;
+    background-color: '#000';
+}
+100% {
+    display: block;
+    opacity: 0.2;
+    background-color: '#000';
+}
+}
+@-webkit-keyframes fadeInFromNone {
+0% {
+    display: none;
+    opacity: 0;
+    background-color: '#000';
+}
+1% {
+    display: block;
+    opacity: 0;
+    background-color: '#000';
+}
+100% {
+    display: block;
+    opacity: 0.2;
+    background-color: '#000';
+}
+}
+@-o-keyframes fadeInFromNone {
+0% {
+    display: none;
+    opacity: 0;
+    background-color: '#000';
+}
+1% {
+    display: block;
+    opacity: 0;
+    background-color: '#000';
+}
+100% {
+    display: block;
+    opacity: 0.2;
+    background-color: '#000';
+}
+}
+@keyframes fadeInFromNone {
+0% {
+    display: none;
+    opacity: 0;
+    background-color: '#000';
+}
+1% {
+    display: block;
+    opacity: 0;
+    background-color: '#000';
+}
+100% {
+    display: block;
+    opacity: 0.2;
+    background-color: '#000';
+}
+}
+.mp-mask {
+  position: fixed;
+  z-index: 9;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  display: none;
+  background-color: #000;
+  opacity: 0;
+  animation: fadeInFromNone 0.5s ease-out;
+  animation-fill-mode: forwards;
+}
+@media (max-width: 705px) {
+.mp-docs-theme__sidebar--open .mp-mask {
+    display: block;
+}
+}
+
+.mp-burger-icon {
+  fill: #fff;
+  stroke: #979797;
+}
+.mp-burger-icon:hover,
+.mp-burger-icon[aria-pressed="true"] {
+  stroke: #4c4c4c;
+}
+
+.button[data-v-998137ac] {
+  background-color: transparent;
+  padding: 0;
+  border: 0;
+  transition: background 0.2s ease-in-out;
+  border-radius: 0px;
+  outline: none;
+  cursor: pointer;
+}
+
+html {
+  background-color: #fff;
+  margin: 0;
+  padding: 0;
+}
+html body {
   -moz-osx-font-smoothing: grayscale;
+  -webkit-font-smoothing: antialiased;
+  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
   font-size: 16px;
 }
+body,
 a,
 a:visited,
 a:active {
+  color: #728798;
   font-weight: 500;
   text-decoration: none;
-  color: #728798;
 }
 a:hover {
   color: #4f5f6c;
@@ -199,7 +311,7 @@ code[class*='language-'],
     text-shadow: none;
 }
 }
-.saber-highlight {
+.minipress-highlight {
   position: relative;
   overflow: hidden;
   margin: 2rem 0;
@@ -207,7 +319,7 @@ code[class*='language-'],
   background-color: #2d3748;
   border-radius: 8px;
 }
-.saber-highlight:before {
+.minipress-highlight:before {
   background: rgba(201,167,255,0.2);
   color: var(--text-color);
   border-radius: 0 0 8px 8px;
@@ -215,12 +327,11 @@ code[class*='language-'],
   padding: 0 10px;
 }
 .code-line.highlighted {
-  background: rgba(201,167,255,0.2);
-  box-shadow: inset 3px 0 0 0 #c9a7ff;
-  background: rgba(3,169,244,0.121);
+  background: rgba(9,11,14,0.4);
+  box-shadow: inset 4px 0 0 0 #6ea1f7;
 }
-.saber-highlight-mask,
-.saber-highlight-code {
+.minipress-highlight-mask,
+.minipress-highlight-code {
   line-height: 1.5;
   background-color: transparent !important;
   text-shadow: none !important;
@@ -233,28 +344,26 @@ code[class*='language-'],
   white-space: pre;
   font-family: Menlo, Monaco, Consolas, Liberation Mono, Courier New, monospace !important;
 }
-.saber-highlight-mask {
+.minipress-highlight-mask {
   position: absolute;
   top: 0;
   bottom: 0;
   left: 0;
   right: 0;
-  z-index: 1;
   color: transparent !important;
   padding-left: 0 !important;
   padding-right: 0 !important;
 }
-.saber-highlight-code {
+.minipress-highlight-code {
   position: relative;
-  z-index: 2;
   font-size: 0 !important;
   font-family: Menlo, Monaco, Consolas, Liberation Mono, Courier New, monospace !important;
 }
-.saber-highlight-code code,
-.saber-highlight-mask {
+.minipress-highlight-code code,
+.minipress-highlight-mask {
   font-size: 0.875rem;
 }
-.saber-highlight-line-numbers {
+.minipress-highlight-line-numbers {
   pointer-events: none;
   font-size: 100%;
   float: left;
@@ -266,11 +375,11 @@ code[class*='language-'],
   margin-right: 0.8rem;
   counter-reset: linenumber;
 }
-.saber-highlight-line-numbers > span {
+.minipress-highlight-line-numbers > span {
   counter-increment: linenumber;
   display: block;
 }
-.saber-highlight-line-numbers > span:before {
+.minipress-highlight-line-numbers > span:before {
   content: counter(linenumber);
   color: #999;
   display: block;
@@ -636,22 +745,37 @@ table th:first-child {
   border-bottom: 1px solid #eaeaea;
   border-top: 1px solid #eaeaea;
 }
+.mp-nav__product {
+  font-size: 1.3rem;
+  font-weight: 600;
+  color: #000;
+  line-height: 2.5rem;
+}
+.mp-nav__product__link {
+  color: #000;
+}
 .mp-layout {
   padding-top: 3.6rem;
   padding-bottom: 50px;
 }
-.mp-layout__left__container {
+.mp-sidebar {
+  background-color: #fff;
   overflow-y: scroll;
   position: fixed;
   width: 320px;
-  top: 64px;
+  top: 63px;
   bottom: 0;
   left: 0;
+  z-index: 999;
+  transition: transform 0.33s ease;
   border-right: 1px solid #dce1e5;
 }
+.mp-sidebar--disabled {
+  transform: translateX(-100%);
+  transition: none;
+}
 .mp-layout__left {
-  padding-left: 2rem;
-  padding-right: 2rem;
+  padding: 0;
   padding-top: 2rem;
   padding-bottom: 2rem;
 }
@@ -672,6 +796,26 @@ table th:first-child {
 }
 .mp-layout__container--without-sidebar {
   margin-left: 0;
+}
+.mp-main-sidebar-button {
+  display: none;
+}
+@media (max-width: 705px) {
+.mp-layout__container {
+    margin-left: 0;
+}
+.mp-main-sidebar-button {
+    display: block;
+}
+.mp-docs-theme__sidebar--open .mp-sidebar {
+    transform: translateX(0);
+}
+.mp-sidebar {
+    transform: translateX(-100%);
+}
+.mp-docs-theme__sidebar--open .mp-sidebar__mask {
+    display: block;
+}
 }
 .mp-main__content {
   margin-left: auto;
