--- a/3.style.css
+++ b/3.style.css
@@ -2,6 +2,9 @@
   display: flex;
   flex-direction: row;
 }
+.mp-flex--center {
+  align-items: center;
+}
 @media (max-width: 705px) {
 .mp-flex--responsive {
     display: flex;
