--- a/style.css
+++ b/style.css
@@ -7,27 +7,31 @@
   color: inherit;
 }
 .mp-nav__item a.mp-nav__item__link {
-  color: #3e4348;
+  color: #122536;
   padding-bottom: 8px;
 }
 .mp-nav__item a.mp-nav__item__link:hover {
   margin-bottom: -$navItemLinkUnderlineWidth;
-  border-bottom: 2.5px solid #728798;
+  border-bottom: 2.5px solid #004e8e;
   padding-bottom: 8px;
 }
 .mp-nav__item a.mp-nav__item__link--active {
   margin-bottom: -$navItemLinkUnderlineWidth;
-  border-bottom: 2.5px solid #728798;
+  border-bottom: 2.5px solid #004e8e;
 }
 
+.logo {
+  color: #777;
+  font-weight: 400;
+}
 .logo__mini {
   padding-left: 0.1rem;
   padding-right: 0.1rem;
   padding-top: 0.3rem;
   padding-bottom: 0.3rem;
   border-radius: 0.33rem;
-  font-weight: 600;
-  color: #ccc;
+  color: #777;
+  font-weight: 700;
 }
 
 .mp-nav[data-v-41fdbb3d] {
@@ -37,7 +41,7 @@
   background-color: #fff;
   padding: 0.7rem 1.5rem;
   line-height: 2.2rem;
-  border-bottom: 1px solid #dce1e5;
+  border-bottom: 1px solid #d1d1d1;
 }
 .mp-nav__items[data-v-41fdbb3d] {
   display: flex;
@@ -52,60 +56,65 @@
 }
 
 .mp-toc__item {
+  font-size: 1rem;
+  padding-top: 4px;
+  padding-bottom: 4px;
+  border-left: 6px solid transparent;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+.mp-toc__item--active {
+  border-left: 6px solid #71dce0;
+  background-color: #e9fafa;
+}
+.mp-toc__item-content {
   padding-left: 2rem;
   padding-right: 2rem;
-  font-size: 1rem;
-  padding-top: 0;
-  padding-bottom: 0;
 }
-.mp-toc__item a.mp-toc__item__link {
-  font-weight: inherit;
-  color: #222;
-}
-.mp-toc__item a.mp-toc__item__link:active,
-.mp-toc__item a.mp-toc__item__link:hover {
-  color: #198ae6;
-}
-.mp-toc__item a.mp-toc__item__link--active {
-  font-weight: 700;
-  color: #198ae6;
-}
-.mp-toc__item[data-toc-item-level="1"] {
+.mp-toc__item-content[data-toc-item-level="1"] {
   margin-left: 0;
   font-size: 1.2rem;
   font-weight: 700;
   margin-block-end: 25px;
 }
-.mp-toc__item[data-toc-item-level="2"] {
+.mp-toc__item-content[data-toc-item-level="2"] {
   margin-left: 0;
   font-size: 1.1rem;
   font-weight: 600;
-  margin-block-end: 0.3rem;
-  margin-block-start: 1rem;
 }
-.mp-toc__item[data-toc-item-level="3"] {
-  margin-block-end: 0.3rem;
+.mp-toc__item-content[data-toc-item-level="3"] {
   margin-left: 0;
   font-size: 0.9rem;
 }
-.mp-toc__item[data-toc-item-level="4"] {
-  margin-block-end: 0.3rem;
+.mp-toc__item-content[data-toc-item-level="4"] {
   margin-left: 10px;
   font-size: 0.8rem;
 }
-.mp-toc__item[data-toc-item-level="5"] {
-  margin-block-end: 0.3rem;
+.mp-toc__item-content[data-toc-item-level="5"] {
   margin-left: 10px;
   font-size: 0.8rem;
 }
-.mp-toc__item[data-toc-item-level="6"] {
-  margin-block-end: 0.3rem;
+.mp-toc__item-content[data-toc-item-level="6"] {
   margin-left: 10px;
   font-size: 0.8rem;
+}
+.mp-toc__item-content a.mp-toc__item__link {
+  display: inline-block;
+  font-weight: inherit;
+  color: #222;
+}
+.mp-toc__item-content a.mp-toc__item__link:active,
+.mp-toc__item-content a.mp-toc__item__link:hover {
+  color: #0b3d67;
+}
+.mp-toc__item-content a.mp-toc__item__link--active {
+  font-weight: 700;
+  color: #0b3d67;
 }
 
 .navbar-items[data-v-1659774c] {
-  border-bottom: 1px solid #dce1e5;
+  border-bottom: 1px solid #d1d1d1;
   margin-bottom: 2rem;
   padding-bottom: 2rem;
   display: none;
@@ -230,19 +239,19 @@ html {
 html body {
   -moz-osx-font-smoothing: grayscale;
   -webkit-font-smoothing: antialiased;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Helvetica Neue, Arial, Noto Sans, sans-serif, Apple Color Emoji, Segoe UI Emoji, Segoe UI Symbol, Noto Color Emoji;
   font-size: 16px;
 }
 body,
 a,
 a:visited,
 a:active {
-  color: #728798;
+  color: #4299e1;
   font-weight: 500;
   text-decoration: none;
 }
 a:hover {
-  color: #4f5f6c;
+  color: #1c6db0;
   text-decoration: none;
 }
 pre {
@@ -303,7 +312,7 @@ code[class*='language-'],
   overflow: hidden;
   margin: 2rem 0;
   color: #fff;
-  background-color: #2d3748;
+  background-color: #2f495e;
   border-radius: 8px;
 }
 .minipress-highlight:before {
@@ -314,8 +323,8 @@ code[class*='language-'],
   padding: 0 10px;
 }
 .code-line.highlighted {
-  background: rgba(9,11,14,0.4);
-  box-shadow: inset 4px 0 0 0 #6ea1f7;
+  background: rgba(9,15,19,0.4);
+  box-shadow: inset 4px 0 0 0 #6ebaf7;
 }
 .minipress-highlight-mask,
 .minipress-highlight-code {
@@ -416,14 +425,14 @@ code[class*='language-'],
 }
 .token.attr-name,
 .token.inserted {
-  color: #ffe484;
+  color: #8af;
 }
 .language-css .token.string,
 .style .token.string,
 .token.entity,
 .token.string,
 .token.url {
-  color: #addb67;
+  color: #00c58e;
 }
 .token.atrule,
 .token.attr-value,
@@ -450,7 +459,7 @@ code[class*='language-'],
   margin-bottom: 40px;
 }
 .page-content h1 a.header-anchor {
-  color: #728798;
+  color: #004e8e;
   font-size: 1em;
   float: left;
   margin-left: -1em;
@@ -475,7 +484,7 @@ code[class*='language-'],
   margin-bottom: 20px;
 }
 .page-content h2 a.header-anchor {
-  color: #728798;
+  color: #004e8e;
   font-size: 1em;
   float: left;
   margin-left: -1em;
@@ -500,7 +509,7 @@ code[class*='language-'],
   margin-bottom: 20px;
 }
 .page-content h3 a.header-anchor {
-  color: #728798;
+  color: #004e8e;
   font-size: 1em;
   float: left;
   margin-left: -1em;
@@ -525,7 +534,7 @@ code[class*='language-'],
   margin-bottom: 20px;
 }
 .page-content h4 a.header-anchor {
-  color: #728798;
+  color: #004e8e;
   font-size: 1em;
   float: left;
   margin-left: -1em;
@@ -550,7 +559,7 @@ code[class*='language-'],
   margin-bottom: 20px;
 }
 .page-content h5 a.header-anchor {
-  color: #728798;
+  color: #004e8e;
   font-size: 1em;
   float: left;
   margin-left: -1em;
@@ -575,7 +584,7 @@ code[class*='language-'],
   margin-bottom: 20px;
 }
 .page-content h6 a.header-anchor {
-  color: #728798;
+  color: #004e8e;
   font-size: 1em;
   float: left;
   margin-left: -1em;
@@ -610,14 +619,14 @@ code[class*='language-'],
 .page-content td code,
 .page-content blockquote code,
 .page-content li code {
-  background-color: rgba(188,216,255,0.2);
+  background-color: #f7fafc;
   padding-left: 0.3rem;
   padding-right: 0.3rem;
   padding-top: 0.3rem;
   padding-bottom: 0.3rem;
   font-size: 0.9rem;
   border-radius: 4px;
-  color: rgba(0,49,180,0.9);
+  color: #6b85a3;
 }
 .page-content pre {
   padding-top: 2rem;
@@ -754,7 +763,7 @@ table th:first-child {
   left: 0;
   z-index: 999;
   transition: transform 0.33s ease;
-  border-right: 1px solid #dce1e5;
+  border-right: 1px solid #d1d1d1;
 }
 .mp-sidebar--disabled {
   transform: translateX(-100%);
@@ -773,7 +782,7 @@ table th:first-child {
 }
 .mp-layout__container {
   margin-left: calc(320px + 2rem);
-  padding-top: 40px;
+  padding-top: 32px;
   padding-left: 2rem;
   padding-right: 2rem;
 }
@@ -806,8 +815,37 @@ table th:first-child {
 .mp-main__content {
   margin-left: auto;
   margin-right: auto;
-  margin-top: 20px;
+  margin-top: 0px;
   margin-bottom: 20px;
+}
+
+.mp-button[data-v-0f3dfcb9] {
+  text-align: center;
+  display: inline-block;
+  padding: 15px 25px;
+  font-weight: 600;
+  font-size: 1.2rem;
+  transition: background 0.2s ease-in-out;
+  border-radius: 5px;
+}
+.mp-button--block[data-v-0f3dfcb9] {
+  display: block;
+}
+.mp-button--secondary[data-v-0f3dfcb9] {
+  color: #808080;
+  background: #efefef;
+}
+.mp-button--secondary[data-v-0f3dfcb9]:hover {
+  color: #404040;
+  background: #ccc;
+}
+.mp-button--primary[data-v-0f3dfcb9] {
+  color: #fff;
+  background: #009da3;
+}
+.mp-button[data-v-0f3dfcb9]:hover {
+  background: #007e82;
+  color: #fff;
 }
 
 .mp-flex__item {
@@ -843,33 +881,104 @@ table th:first-child {
 }
 }
 
-.mp-button[data-v-0c69e2e9] {
-  text-align: center;
-  display: inline-block;
-  padding: 15px 25px;
-  font-weight: 600;
+.tip[data-v-511d3a8c] {
+  color: #336c45;
+  background-color: #e8f4ec;
+  border-radius: 4px 4px;
+  border-left: 8px solid #b2dbbf;
+  padding: 15px 30px 15px 15px;
+  margin: 2rem 0;
+}
+.tip[data-v-511d3a8c] > :first-child {
+  margin-top: 0;
+}
+.tip[data-v-511d3a8c] > :last-child {
+  margin-bottom: 0;
+}
+.tip__title[data-v-511d3a8c] {
+  color: #295637;
   font-size: 1.2rem;
-  transition: background 0.2s ease-in-out;
-  border-radius: 5px;
+  font-weight: 600;
+  margin-bottom: -0.9rem;
 }
-.mp-button--block[data-v-0c69e2e9] {
-  display: block;
+.tip code[data-v-511d3a8c] {
+  background-color: #d1e9d9;
+  color: #2e613e;
 }
-.mp-button--secondary[data-v-0c69e2e9] {
-  color: #808080;
-  background: #efefef;
+
+.info[data-v-2f4a2af0] {
+  color: #1e868a;
+  background-color: #e9fafa;
+  border-radius: 4px 4px;
+  border-left: 8px solid #b6edef;
+  padding: 15px 30px 15px 15px;
+  margin: 2rem 0;
 }
-.mp-button--secondary[data-v-0c69e2e9]:hover {
-  color: #404040;
-  background: #ccc;
+.info[data-v-2f4a2af0] > :first-child {
+  margin-top: 0;
 }
-.mp-button--primary[data-v-0c69e2e9] {
-  color: #fff;
-  background: #1669b1;
+.info[data-v-2f4a2af0] > :last-child {
+  margin-bottom: 0;
 }
-.mp-button--primary[data-v-0c69e2e9]:hover {
-  color: #fff;
-  background: #006eff;
+.info__title[data-v-2f4a2af0] {
+  color: #186b6e;
+  font-size: 1.2rem;
+  font-weight: 600;
+  margin-bottom: -0.9rem;
+}
+.info code[data-v-2f4a2af0] {
+  background-color: #cdf4f4;
+  color: #1b797c;
+}
+
+.warn[data-v-64e28b4a] {
+  color: #b17f00;
+  background-color: #fff9eb;
+  border-radius: 4px 4px;
+  border-left: 8px solid #ffecbc;
+  padding: 15px 30px 15px 15px;
+  margin: 2rem 0;
+}
+.warn[data-v-64e28b4a] > :first-child {
+  margin-top: 0;
+}
+.warn[data-v-64e28b4a] > :last-child {
+  margin-bottom: 0;
+}
+.warn__title[data-v-64e28b4a] {
+  color: #8e6600;
+  font-size: 1.2rem;
+  font-weight: 600;
+  margin-bottom: -0.9rem;
+}
+.warn code[data-v-64e28b4a] {
+  background-color: #ffefc9;
+  color: #9f7200;
+}
+
+.error[data-v-23e7a489] {
+  color: #ba0030;
+  background-color: #fff1f5;
+  border-radius: 4px 4px;
+  border-left: 8px solid #ffd1dd;
+  padding: 15px 30px 15px 15px;
+  margin: 2rem 0;
+}
+.error[data-v-23e7a489] > :first-child {
+  margin-top: 0;
+}
+.error[data-v-23e7a489] > :last-child {
+  margin-bottom: 0;
+}
+.error__title[data-v-23e7a489] {
+  color: #950026;
+  font-size: 1.2rem;
+  font-weight: 600;
+  margin-bottom: -0.9rem;
+}
+.error code[data-v-23e7a489] {
+  background-color: #ffcedc;
+  color: #a7002b;
 }
 
 
