--- a/style.css
+++ b/style.css
@@ -242,7 +242,6 @@ html body {
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Helvetica Neue, Arial, Noto Sans, sans-serif, Apple Color Emoji, Segoe UI Emoji, Segoe UI Symbol, Noto Color Emoji;
   font-size: 16px;
 }
-body,
 a,
 a:visited,
 a:active {
@@ -602,6 +601,16 @@ code[class*='language-'],
   line-height: 1.9rem;
   color: #000;
 }
+.page-content code {
+  background-color: #f7fafc;
+  padding-left: 0.3rem;
+  padding-right: 0.3rem;
+  padding-top: 0.3rem;
+  padding-bottom: 0.3rem;
+  font-size: 0.9rem;
+  border-radius: 4px;
+  color: #6b85a3;
+}
 .page-content img {
   max-width: 100%;
 }
@@ -615,9 +624,7 @@ code[class*='language-'],
   background: #efefef;
   margin: 30px 0;
 }
-.page-content p code,
 .page-content td code,
-.page-content blockquote code,
 .page-content li code {
   background-color: #f7fafc;
   padding-left: 0.3rem;
@@ -677,13 +684,13 @@ blockquote {
   border-left: 8px solid #ffe564;
   padding: 15px 30px 15px 15px;
   margin: 2rem 0;
-  color: #6a737d;
 }
+blockquote color $page-config.blockquote.color,
 blockquote > :first-child {
-  margin-top: 0;
+  margin: 0;
 }
 blockquote > :last-child {
-  margin-bottom: 0;
+  margin: 0;
 }
 small code {
   font-size: inherit;
@@ -819,6 +826,110 @@ table th:first-child {
   margin-bottom: 20px;
 }
 
+/*
+Markup Example:
+<div class="sc-container">
+  <details class="sc-container__details">
+    <summary class="sc-container__summary">More…</summary>
+    <div class="sc-container__body">
+      Remaining Content goes here
+    </div>
+  </details>
+</div>
+*/
+.sc-container {
+  border-left: 1px solid #efefef;
+  border-right: 1px solid #efefef;
+  border-top: 1px solid #efefef;
+  border-bottom: 1px solid #efefef;
+  border-radius: 0px 0px;
+  padding-left: 0px;
+  margin-top: 1rem;
+  margin-bottom: 1rem;
+}
+.sc-container__body {
+  margin-left: 15px;
+  margin-right: 15px;
+  padding-top: 8px;
+  padding-bottom: 8px;
+}
+.sc-container__details {
+  border-bottom-left-radius: 0px;
+  border-bottom-right-radius: 0px;
+  width: 100%;
+}
+.sc-container__details p {
+  margin: 0;
+}
+.sc-container__details[open] > .sc-container__summary {
+  border-bottom: 1px solid #efefef;
+  border-bottom-left-radius: 0;
+  border-bottom-right-radius: 0;
+}
+.sc-container__summary {
+  user-select: none;
+  background-color: #fcfcfc;
+  cursor: pointer;
+  outline: none;
+  font-size: 0.8rem;
+  padding-left: 3.5px;
+}
+.sc-container__summary::-webkit-details-marker {
+  display: none;
+}
+.sc-container__control {
+  margin-top: auto;
+  margin-bottom: auto;
+  height: 30px;
+  margin-right: 3.5px;
+}
+.sc-container__summary > div > .sc-container__control {
+  transform: scale(0.5, 0.5) rotate(-90deg);
+}
+.sc-container__details[open] > .sc-container__summary > div > .sc-container__control {
+  transform: scale(0.5, 0.5) rotate(0deg);
+}
+
+.component-documentation > pre {
+  padding: 0;
+}
+.component-documentation__prop p,
+.component-documentation__event p,
+.component-documentation__slot p {
+  margin: 0;
+}
+.component-documentation hr {
+  margin: 0;
+}
+.component-documentation__props,
+.component-documentation__events,
+.component-documentation__slots {
+  margin-bottom: 2rem;
+}
+.component-documentation__props p,
+.component-documentation__events p,
+.component-documentation__slots p {
+  margin: 0;
+}
+.component-documentation__props-heading,
+.component-documentation__slots-heading,
+.component-documentation__events-heading {
+  border-bottom: 1px solid #efefef;
+  padding-bottom: 8px;
+  font-size: 1.5rem;
+  margin-top: 2rem;
+  margin-bottom: 1rem;
+}
+
+
+.icon.outbound {
+  color: #aaa;
+  display: inline-block;
+  vertical-align: middle;
+  position: relative;
+  top: -1px;
+}
+
 .mp-button[data-v-0f3dfcb9] {
   text-align: center;
   display: inline-block;
@@ -882,12 +993,12 @@ table th:first-child {
 }
 
 .tip[data-v-511d3a8c] {
-  color: #336c45;
   background-color: #e8f4ec;
   border-radius: 4px 4px;
   border-left: 8px solid #b2dbbf;
-  padding: 15px 30px 15px 15px;
+  color: #336c45;
   margin: 2rem 0;
+  padding: 15px 30px 15px 15px;
 }
 .tip[data-v-511d3a8c] > :first-child {
   margin-top: 0;
@@ -907,12 +1018,12 @@ table th:first-child {
 }
 
 .info[data-v-2f4a2af0] {
-  color: #1e868a;
   background-color: #e9fafa;
   border-radius: 4px 4px;
   border-left: 8px solid #b6edef;
-  padding: 15px 30px 15px 15px;
+  color: #1e868a;
   margin: 2rem 0;
+  padding: 15px 30px 15px 15px;
 }
 .info[data-v-2f4a2af0] > :first-child {
   margin-top: 0;
@@ -932,12 +1043,12 @@ table th:first-child {
 }
 
 .warn[data-v-64e28b4a] {
-  color: #b17f00;
   background-color: #fff9eb;
   border-radius: 4px 4px;
   border-left: 8px solid #ffecbc;
-  padding: 15px 30px 15px 15px;
+  color: #b17f00;
   margin: 2rem 0;
+  padding: 15px 30px 15px 15px;
 }
 .warn[data-v-64e28b4a] > :first-child {
   margin-top: 0;
@@ -957,12 +1068,12 @@ table th:first-child {
 }
 
 .error[data-v-23e7a489] {
-  color: #ba0030;
   background-color: #fff1f5;
   border-radius: 4px 4px;
   border-left: 8px solid #ffd1dd;
-  padding: 15px 30px 15px 15px;
+  color: #ba0030;
   margin: 2rem 0;
+  padding: 15px 30px 15px 15px;
 }
 .error[data-v-23e7a489] > :first-child {
   margin-top: 0;
@@ -979,14 +1090,5 @@ table th:first-child {
 .error code[data-v-23e7a489] {
   background-color: #ffcedc;
   color: #a7002b;
-}
-
-
-.icon.outbound {
-  color: #aaa;
-  display: inline-block;
-  vertical-align: middle;
-  position: relative;
-  top: -1px;
 }
 
